feat: :sparkles: 扩展bean拷贝方法